k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metamind
  labels:
    name: metamind
    app: metamind
